[project]
name = "prax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bhargav Kulkarni", email = "bhargav.kulkarni1@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff",
    "pyrefly",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
